log

Tue 12 Mar 2024 01:49:44 PM UTC: 
 tests:  0|7
total_score: 0/70
1489c92
Tue 12 Mar 2024 01:57:54 PM UTC: 
 exercises.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
b8083a4
Tue 12 Mar 2024 01:59:12 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
29caaa3
Tue 12 Mar 2024 02:07:04 PM UTC: 
 exercises.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
37c4fcf
Tue 12 Mar 2024 02:07:38 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:39:14: error: expected expression before ‘;’ token
   39 |       inicio+;
      |              ^
Compilation failed
a5cce50
Tue 12 Mar 2024 02:07:51 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:39:7: error: statement with no effect [-Werror=unused-value]
   39 |       inicio;
      |       ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
eff2c48
Tue 12 Mar 2024 02:08:06 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
3171d45
Thu 14 Mar 2024 07:26:09 PM UTC: 
 exercises.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:53:6: error: ‘newsize’ undeclared (first use in this function); did you mean ‘newSize’?
   53 |     *newsize = 0;
      |      ^~~~~~~
      |      newSize
exercises.c:53:6: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
bce6450
Thu 14 Mar 2024 07:26:20 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
6980221
Thu 14 Mar 2024 07:41:09 PM UTC: 
 exercises.c | 26 +++++++++++++++++++++++++-
 1 file changed, 25 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:81:10: error: ‘arr’ undeclared (first use in this function); did you mean ‘arr2’?
   81 |       if(arr[i] < arr2[j])
      |          ^~~
      |          arr2
exercises.c:81:10: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
46899b8
Thu 14 Mar 2024 07:41:17 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
13d018c
